; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_rebase.c_rebase_init_inmemory.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_rebase.c_rebase_init_inmemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i32*, i32*, i32*)* @rebase_init_inmemory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rebase_init_inmemory(%struct.TYPE_3__* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @GIT_UNUSED(i32* %11)
  %13 = load i32*, i32** %9, align 8
  %14 = call i32 @GIT_UNUSED(i32* %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @git_annotated_commit_id(i32* %18)
  %20 = call i32 @git_commit_lookup(i32* %16, i32* %17, i32 %19)
  ret i32 %20
}

declare dso_local i32 @GIT_UNUSED(i32*) #1

declare dso_local i32 @git_commit_lookup(i32*, i32*, i32) #1

declare dso_local i32 @git_annotated_commit_id(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
